# base_graph

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
base_graph/: base_graph.py
src/: __init__.py
src/base_graph/: __int__.py  base_graph.py
tests/: test_base_graph.py
